@@ -1,6 +1,6 @@
 Package: DiffBind
 Type: Package
-Version: 2.7.3
+Version: 2.7.4
 Title: Differential Binding Analysis of ChIP-Seq Peak Data
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gord Brown
         <gdbzork@gmail.com>
